Basic Accurate Recreation of Original Webflow Site (Non-Responsive)

--- a/calibercoffee.html
+++ b/calibercoffee.html
@@ -3,6 +3,7 @@
 <head>
   <title>Caliber Coffee</title>
   <link rel="stylesheet" type = "text/css" href="css/videoshowcase.css">
+  <link rel="shortcut icon" href="img/jnalogosupersmall.png">
 </head>
 <body>
   <header id="main-header">
@@ -26,7 +27,51 @@
 
   <br>
 
-  <div id="body-container">
+  <div class="body-container">
+    <!-- Featured Video -->
+    <a name="cc"></a>
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/269994061?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+    <!-- Featured Video Description-->
+    <div class="video-description">
+      <h1>CALIBER COFFEE - MONTAGE</h1>
+      <p>A montage-style promotional video for Caliber Coffee of Donelson, TN.
+        <br>
+        Accompanied by 3 single-product videos, visible below. May 2018.
+      </p>
+    </div>
+
+    <br>
+
+    <div class="next-prev">
+      <a href="donteatthecow.html#detc"><h3 class="prev">PREVIOUS</h3></a>
+      <a href="itsnotjustyourphone.html#injyp"<h3 class="next">NEXT</h3></a>
+    </div>
+
+    <br>
+
+    <hr class="bottom-margin">
+
+    <!-- Thai Coffee Video -->
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/270189145?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <div class="video-description">
+      <h1>THAI COFFEE</h1>
+    </div>
+    <hr class="bottom-margin">
+
+    <!-- Butter Beer Latte Video -->
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/270189221?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <div class="video-description">
+      <h1>BUTTER BEER LATTE</h1>
+    </div>
+    <hr class="bottom-margin">
+
+    <!-- Kona Frappe Video -->
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/270189598?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <div class="video-description">
+      <h1>KONA FRAPPE</h1>
+    </div>
+    <hr class="bottom-margin">
 
   </div>
 </body>
