--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>J & A Films</title>
   <link rel="stylesheet" type = "text/css" href="css/style.css">
+  <link rel="shortcut icon" href="img/jnalogosupersmall.png">
 </head>
 <body>
   <header id="main-header">
@@ -26,7 +27,7 @@
 
     <br>
 
-    <div id="body-container">
+    <div class="body-container">
 <!-- Video Example Stuff -->
     <section>
       <a name="our-work"></a>
@@ -34,7 +35,7 @@
       <br>
       <div id="video-example-thumbnails">
         <ul id="video-example-ul">
-          <li id="detc-thumb"><a href="donteatthecow.html"><img src="img/donteatthecowthumbnail.jpg" alt="Don't Eat the Cow Thumbnail"></a></li>
+          <li id="detc-thumb"><a href="donteatthecow.html#detc"><img src="img/donteatthecowthumbnail.jpg" alt="Don't Eat the Cow Thumbnail"></a></li>
           <li id="cal-thumb"><a href="calibercoffee.html"><img src="img/caliberthumbnail.jpg" alt="Caliber Coffee Thumbnail"></a></li>
           <li id="injyp-thumb"><a href="itsnotjustyourphone.html"><img src="img/itsnotjustyourphonethumbnail.jpg" alt="It's Not Just Your Phone Thumbnail"></a></li>
         </ul>
@@ -115,7 +116,7 @@
     </section>
 
 
-    <hr id="bottom-margin">
+    <hr class="bottom-margin">
 
   </div>
 </body>
