--- a/itsnotjustyourphone.html
+++ b/itsnotjustyourphone.html
@@ -3,6 +3,7 @@
 <head>
   <title>It's Not Just Your Phone</title>
   <link rel="stylesheet" type = "text/css" href="css/videoshowcase.css">
+  <link rel="shortcut icon" href="img/jnalogosupersmall.png">
 </head>
 <body>
   <header id="main-header">
@@ -26,8 +27,31 @@
 
   <br>
 
-  <div id="body-container">
+  <div class="body-container">
+    <!-- Featured Video -->
+    <a name="injyp"></a>
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/270190386?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
+    <!-- Featured Video Description-->
+    <div class="video-description">
+      <h1>IT'S NOT JUST YOUR PHONE</h1>
+      <p>An anti-distracted driving PSA.
+        <br>
+        April 2017.
+      </p>
+    </div>
+
+    <br>
+
+    <div class="next-prev">
+      <a href="calibercoffee.html#cc"><h3 class="prev">PREVIOUS</h3></a>
+      <a href="donteatthecow.html#detc"><h3 class="next">NEXT</h3></a>
+    </div>
+
+    <br>
+
+    <hr class="bottom-margin">
   </div>
+
 </body>
 </html>
