--- a/itsnotjustyourphone.html
+++ b/itsnotjustyourphone.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
   <title>It's Not Just Your Phone</title>
   <link rel="stylesheet" type = "text/css" href="css/videoshowcase.css">
