basic responsive css complete

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
           <li id="nashville-tn">NASHVILLE, TN</li>
         </ul>
 
-          <h2><a href="#our-work">OUR WORK</a></h2>
-          <h2><a href="#about-us">ABOUT US</a></h2>
-          <h2><a href="#contact-us">CONTACT US</a></h2>
+          <h2 class="full-text"><a href="#our-work">OUR WORK</a></h2>
+          <h2 class="full-text"><a href="#about-us">ABOUT US</a></h2>
+          <h2 class="full-text"><a href="#contact-us">CONTACT US</a></h2>
+
+          <h2 class="short-text"><a href="#our-work">WORK</a></h2>
+          <h2 class="short-text"><a href="#about-us">ABOUT</a></h2>
+          <h2 class="short-text"><a href="#contact-us">CONTACT</a></h2>
 
         <div id="insta-logo"><a href="http://instagram.com/" target="_blank"><img src="img/instagramlogo.png" alt="Instagram Logo"></a></div>
 
@@ -98,7 +102,7 @@
         <input class="non-button-input" type="email" name="email" placeholder="Enter your email address" onclick="this.value='';this.style.color='black';">
         <br>
         <label>I AM INTERESTED IN:</label>
-        <input class="non-button-input" type="text" name="interest" placeholder="Restaurant video, personal photos for social media, music video, etc." onclick="this.value='';this.style.color='black';">
+        <input class="non-button-input" type="text" name="interest" placeholder="Music video, portraits, etc." onclick="this.value='';this.style.color='black';">
         <br>
         <label>I HEARD ABOUT J & A FILMS THROUGH:</label>
         <select class="non-button-input" name="heardAbout">
@@ -109,7 +113,7 @@
         </select>
         <br>
         <label>PREFERRED CONTACT:</label>
-        <input class="non-button-input" type="text" name="prefContact" placeholder="Phone Number, Instagram, Email, etc." onclick="this.value='';this.style.color='black';">
+        <input class="non-button-input" type="text" name="prefContact" placeholder="Phone Number, Email, etc." onclick="this.value='';this.style.color='black';">
         <br>
         <input class="submit-button" type="submit" name="submit" value="SUBMIT">
       </form>
